# surek

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  index.ts  package.json  pyproject.toml  surek.config.schema.json  surek.stack.schema.json  surek.yml.example  tsconfig.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_SPEC.md  SUREK_PYTHON_V2_DRAFT.md  SUREK_V2_SPEC.md
example-stacks/gitea/: docker-compose.yml  surek.stack.yml
example-stacks/rss/: docker-compose.yml  surek.stack.yml
src/: commands.ts  compose-spec.ts  compose.ts  config.ts  const.ts  github.ts  logger.ts  stacks.ts  utils.ts
src/surek/: __init__.py  __main__.py  exceptions.py
src/surek/cli/: __init__.py  main.py
src/surek/cli/commands/: backup.py  init.py  stack.py  system.py
src/surek/core/: __init__.py  backup.py  compose.py  config.py  deploy.py  docker.py  github.py  stacks.py  variables.py
src/surek/models/: __init__.py  config.py  stack.py
src/surek/resources/: __init__.py  llm_docs.md
src/surek/resources/system/: backup-daily.env  backup-manual.env  backup-monthly.env  backup-weekly.env  docker-compose.yml  surek.stack.yml
src/surek/tui/: __init__.py  app.py
src/surek/tui/screens/: __init__.py  backups.py  stack_info.py  stacks.py
src/surek/tui/widgets/: __init__.py  logs_panel.py  top_bar.py
src/surek/utils/: __init__.py  env.py  logging.py  paths.py
src/utils/: fs.ts  misc.ts
system/: backup-weekly.env  docker-compose.yml  surek.stack.yml
tests/: __init__.py  test_backup.py  test_compose.py  test_config.py  test_env.py  test_github.py  test_models.py  test_stacks.py  test_variables.py
